--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#353b3b3b" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/favicon/manifest.json" />
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="%PUBLIC_URL%/favicon/manifest.json">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#353b3b3b">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +29,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WSF Portfolio</title>
+    <!-- GOOGLE -->
+    <meta name="description"
+      content="I'm a Front End Engineer in the San Francisco Bay Area. I specialize in UI design and web application development.">
+    <meta name="keywords"
+      content="portfolio, javascript, nodejs, mongodb, reactjs, sketch, invision, redux, webpack">
+    <meta name="author" content="William S Fuller" />
+    <meta name="copyright" content="2019" />
+    <meta name="application-name" content="WSF Portfolio" />
+    <!-- FACEBOOK -->
+    <meta property="og:title" content="WSF Portfolio">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/social-media-share-image.png" />
+    <meta property="og:url" content="https://willliamsfuller.com" />
+    <meta property="og:description"
+      content="I'm a Front End Engineer in the San Francisco Bay Area. I specialize in UI design and web application development." />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="1200">
+    <!-- TWITTER -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@williamsfuller_" />
+    <meta name="twitter:title" content="WSF Portfolio" />
+    <meta name="twitter:description"
+      content="I'm a Front End Engineer in the San Francisco Bay Area. I specialize in UI design and web application development." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/social-media-share-image.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
