--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
     <title>WSF Portfolio</title>
     <!-- GOOGLE -->
     <meta name="description"
-      content="I'm a Front End Engineer in the San Francisco Bay Area. I specialize in UI design and web application development.">
+      content="I am a Front End Engineer that is also fascinated with back end technologies. My current technology stack is React, Redux, GraphQL, and Styled Components/JSS. I absolutely love taking every new day as an opportunity to learn and grow as an engineer.">
     <meta name="keywords"
-      content="portfolio, javascript, nodejs, mongodb, reactjs, sketch, invision, redux, webpack">
+      content="portfolio, javascript, nodejs, mongodb, reactjs, sketch, graphql, redux, webpack, engineer, front end,">
     <meta name="author" content="William S Fuller" />
     <meta name="copyright" content="2019" />
     <meta name="application-name" content="WSF Portfolio" />
@@ -44,7 +44,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/social-media-share-image.png" />
     <meta property="og:url" content="https://willliamsfuller.com" />
     <meta property="og:description"
-      content="I'm a Front End Engineer in the San Francisco Bay Area. I specialize in UI design and web application development." />
+      content="I am a Front End Engineer that is also fascinated with back end technologies. My current technology stack is React, Redux, GraphQL, and Styled Components/JSS. I absolutely love taking every new day as an opportunity to learn and grow as an engineer." />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
     <!-- TWITTER -->
@@ -52,7 +52,7 @@
     <meta name="twitter:site" content="@williamsfuller_" />
     <meta name="twitter:title" content="WSF Portfolio" />
     <meta name="twitter:description"
-      content="I'm a Front End Engineer in the San Francisco Bay Area. I specialize in UI design and web application development." />
+      content="I am a Front End Engineer that is also fascinated with back end technologies. My current technology stack is React, Redux, GraphQL, and Styled Components/JSS. I absolutely love taking every new day as an opportunity to learn and grow as an engineer." />
     <meta name="twitter:image" content="%PUBLIC_URL%/social-media-share-image.png" />
   </head>
   <body>
