Adding background color on page load
App is flickering from white to dark gray. This is a result of the app loading and then adding styles to the body tag. Have added inline style to the public/index.html file to avoid this flicker

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       content="I am a Front End Engineer that is also fascinated with back end technologies. My current technology stack is React, Redux, GraphQL, and Styled Components/JSS. I absolutely love taking every new day as an opportunity to learn and grow as an engineer." />
     <meta name="twitter:image" content="%PUBLIC_URL%/social-media-share-image.png" />
   </head>
-  <body>
+  <body style="background-color:#303030">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
