--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,11 @@
       content="I am a Front End Engineer that is also fascinated with back end technologies. My current technology stack is React, Redux, GraphQL, and Styled Components/JSS. I absolutely love taking every new day as an opportunity to learn and grow as an engineer." />
     <meta name="twitter:image" content="%PUBLIC_URL%/social-media-share-image.png" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
